--- a/Jun13/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Jun13/en.lproj/MainStoryboard_iPhone.storyboard
@@ -27,12 +27,20 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PZ0-5j-MRg">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="259-TT-cGE"/>
+                                    <constraint firstAttribute="width" constant="240" id="TsR-Wt-YsJ"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="9Fm-Y0-kiV" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="LyN-Ic-JkU"/>
+                            <constraint firstItem="AlE-IP-DaV" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="GKt-Rq-qqZ"/>
                             <constraint firstItem="9Fm-Y0-kiV" firstAttribute="centerX" secondItem="AlE-IP-DaV" secondAttribute="centerX" type="default" id="l4y-wI-w4z"/>
+                            <constraint firstItem="PZ0-5j-MRg" firstAttribute="top" secondItem="3" secondAttribute="top" constant="240" id="llW-mg-3t1"/>
                             <constraint firstItem="AlE-IP-DaV" firstAttribute="top" secondItem="3" secondAttribute="top" constant="66" id="qc7-oS-byg"/>
+                            <constraint firstItem="PZ0-5j-MRg" firstAttribute="centerX" secondItem="9Fm-Y0-kiV" secondAttribute="centerX" type="default" id="t9U-m9-HQ1"/>
                             <constraint firstItem="9Fm-Y0-kiV" firstAttribute="top" secondItem="3" secondAttribute="top" constant="140" id="yu5-Uy-laa"/>
                         </constraints>
                     </view>
@@ -41,6 +49,14 @@
             </objects>
         </scene>
     </scenes>
+    <classes>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="ViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
