--- a/Jun13/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Jun13/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12D78" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -27,20 +27,12 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PZ0-5j-MRg">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="259-TT-cGE"/>
-                                    <constraint firstAttribute="width" constant="240" id="TsR-Wt-YsJ"/>
-                                </constraints>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="AlE-IP-DaV" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="GKt-Rq-qqZ"/>
                             <constraint firstItem="9Fm-Y0-kiV" firstAttribute="centerX" secondItem="AlE-IP-DaV" secondAttribute="centerX" type="default" id="l4y-wI-w4z"/>
-                            <constraint firstItem="PZ0-5j-MRg" firstAttribute="top" secondItem="3" secondAttribute="top" constant="240" id="llW-mg-3t1"/>
                             <constraint firstItem="AlE-IP-DaV" firstAttribute="top" secondItem="3" secondAttribute="top" constant="66" id="qc7-oS-byg"/>
-                            <constraint firstItem="PZ0-5j-MRg" firstAttribute="centerX" secondItem="9Fm-Y0-kiV" secondAttribute="centerX" type="default" id="t9U-m9-HQ1"/>
                             <constraint firstItem="9Fm-Y0-kiV" firstAttribute="top" secondItem="3" secondAttribute="top" constant="140" id="yu5-Uy-laa"/>
                         </constraints>
                     </view>
@@ -55,6 +47,9 @@
         </class>
         <class className="ViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="btnClicked:"/>
+            </relationships>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
